# campus-mate-ai-agent

./: .env.example  .gitignore  AGENT_SKILL_MAPPING.md  CAMPUS_CAREER_AI_PROJECT_SUMMARY.md  CLAUDE.md  FINAL_DELIVERABLES.txt  GIT_PUSH_STATUS.md  IMPLEMENTATION_STATUS.md  LICENSE  MANIFEST.sha256  Makefile  PROFILE_AGENT_COMPLETION_REPORT.md  PROFILE_AGENT_FINAL.md  PROFILE_AGENT_IMPLEMENTATION.md  README.en.md  README.md  SECURITY.md  WORKFLOW_ARCHITECTURE.md  WORKFLOW_QUICK_REFERENCE.md  WORKFLOW_SETUP_CHECKLIST.md  pyproject.toml  role-table.md  spec.md  workflow.md
.claude/: settings.json
.claude/agents/: accept-sync.md  daily-collector.md  fit-priority.md  multipass-parser.md  notion-dashboard.md  profile-manager.md  schedule-notification.md  slack-briefing.md  source-collector.md
.claude/hooks/: README.md  guard_secrets.py  log_subagent.py  validate_workspace.py
.github/workflows/: ci.yml
_workspace/: README.md
data/: README.md
docs/: architecture.md  data-contracts.md  demo-runbook.md  known-limitations.md  timely-deployment.md
examples/: profile.example.json
materials/: 2026-campus-mate-7min-script.docx  2026-campus-mate-presentation.pptx  README.md
scripts/: create_notion_database.py  scan_secrets.py  validate_harness.py
tests/: conftest.py  test_calendar_bridge.py  test_conflicts.py  test_harness_structure.py  test_html_parser.py  test_json_repository.py  test_multipass.py  test_notion_repository.py  test_ocr_parser.py  test_onboarding.py  test_recommendation.py  test_secret_scan.py  test_slack.py
timely/: README.md  automations.yaml
(+102 files in other folders)
