[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campus-mate"
version = "2.0.0"
description = "Code-backed Claude Code harness for collecting, parsing, recommending, and scheduling university competition notices."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "LEXUS Team contributors" }
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "python-dateutil>=2.9,<3",
  "python-dotenv>=1.0,<2",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
ocr = [
  "pillow>=10,<13",
  "playwright>=1.45,<2",
  "pytesseract>=0.3.10,<0.4",
]
vision = [
  "openai>=1.52,<3",
]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.6,<1",
]

[project.scripts]
campus-mate = "campus_mate.cli:main"
campus-mate-skill = "campus_mate.skill_runner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
